--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,7 +1,7 @@
 @conference{samuels:oss16,
   author =    {Allen Samuels},
   title =     {{{The Consequences of Infinite Storage Bandwidth}}},
-  booktitle = {{{OpenStack Summit 2016}}}
+  booktitle = {{{OpenStack Summit 2016}}},
   series = {OpenStack '16},
   year = {2016},
 }
