title and authors
Signed-off-by: Noah Watkins <noahwatkins@gmail.com>

--- a/paper.tex
+++ b/paper.tex
@@ -78,7 +78,8 @@
 %\crdata{0-12345-67-8/90/01}  % Allows default copyright data (0-89791-88-6/97/05) to be over-ridden - IF NEED BE.
 % --- End of Author Metadata ---
 
-\title{Alternate {\ttlit ACM} SIG Proceedings Paper in LaTeX Format}
+\title{Storage challenges in heterogeneous environments}
+
 %
 % You need the command \numberofauthors to handle the 'placement
 % and alignment' of the authors beneath the title.
@@ -121,7 +122,9 @@
 %
 % 1st. author
 \alignauthor
-Noah Watkins, Michael Sevilla, Jeff LeFevre, Carlos Maltzahn
+Noah Watkins, Michael Sevilla, Jeff LeFevre, Carlos Maltzahn \\
+\affaddr{University of California, Santa Cruz} \\
+\affaddr{\{nmwatkin,msevilla,jlefevre,carlosm\}@ucsc.edu}
 }
 
 % There's nothing stopping you putting the seventh, eighth, etc.
