--- a/sigproc.bib
+++ b/sigproc.bib
@@ -19,3 +19,18 @@
   booktitle = {{{Proceedings of the International Conference on High Performance Computing, Networking, Storage and Analysis}}},
   series    = {SC '12},
 }
+
+@inproceedings{sevilla:es17-malac,
+  title     = {{{Malacology: A Programmable Storage System}}},
+  author    = {Sevilla, Michael A and Watkins, Noah and Jimenez, Ivo and Alvaro, Peter and Finkelstein, Shel and LeFevre, Jeff and Maltzahn, Carlos},
+  booktitle = {{{Proceedings of the Twelfth European Conference on Computer Systems}}},
+  series    = {EuroSys '17},
+}
+
+@inproceedings {watkins:hot17-declstor,
+  title     = {{{DeclStore: Layering Is for the Faint of Heart}}},
+  author    = {Noah Watkins and Michael A. Sevilla and Ivo Jimenez and Kathryn Dahlgren and Peter Alvaro and Shel Finkelstein and Carlos Maltzahn},
+  booktitle = {{{9th USENIX Workshop on Hot Topics in Storage and File Systems}}},
+  series    = {HotStorage '17},
+}
+
