fix author list
Signed-off-by: Michael Sevilla <mikesevilla3@gmail.com>

--- a/paper.tex
+++ b/paper.tex
@@ -122,7 +122,7 @@
 %
 % 1st. author
 \alignauthor
-Noah Watkins, Michael Sevilla, Jeff LeFevre, Carlos Maltzahn \\
+Noah Watkins, Michael A. Sevilla, Jeff LeFevre, Carlos Maltzahn \\
 \affaddr{University of California, Santa Cruz} \\
 \affaddr{\{nmwatkin,msevilla,jlefevre,carlosm\}@ucsc.edu}
 }
