--- a/sigproc.bib
+++ b/sigproc.bib
@@ -23,14 +23,34 @@
 @inproceedings{sevilla:es17-malac,
   title     = {{{Malacology: A Programmable Storage System}}},
   author    = {Sevilla, Michael A and Watkins, Noah and Jimenez, Ivo and Alvaro, Peter and Finkelstein, Shel and LeFevre, Jeff and Maltzahn, Carlos},
-  booktitle = {{{Proceedings of the Twelfth European Conference on Computer Systems}}},
-  series    = {EuroSys '17},
+  booktitle = {EuroSys '17},
 }
 
 @inproceedings {watkins:hot17-declstor,
   title     = {{{DeclStore: Layering Is for the Faint of Heart}}},
   author    = {Noah Watkins and Michael A. Sevilla and Ivo Jimenez and Kathryn Dahlgren and Peter Alvaro and Shel Finkelstein and Carlos Maltzahn},
-  booktitle = {{{9th USENIX Workshop on Hot Topics in Storage and File Systems}}},
-  series    = {HotStorage '17},
+  booktitle    = {HotStorage '17},
 }
 
+@inproceedings {friedrich:ecoop16,
+  title     = {Making an Embedded DBMS JIT-friendly},
+  author    = {Carl Friedrich Bolz-Tereick and Darya Melicher and Laurence Tratt},
+  booktitle = {ECOOP '16},
+}
+
+@inproceedings{wurt,
+ author = {W\"{u}rthinger, Thomas},
+ title = {Graal and Truffle: Modularity and Separation of Concerns As Cornerstones for Building a Multipurpose Runtime},
+ series = {MODULARITY '14},
+ year = {2014},
+ isbn = {978-1-4503-2773-2},
+ location = {Lugano, Switzerland},
+ pages = {3--4},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/2584469.2584663},
+ doi = {10.1145/2584469.2584663},
+ acmid = {2584663},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamic languages, language implementation, multi-language, optimization, virtual machine},
+} 
